isc-dhcp (4.1.0-1) unstable; urgency=low

  * The "throw everything out and start over" release
  * New upstream release
  * debian/control: drop 3 from the binary package names, adjust dependencies,
    maintainer scripts, accordingly
  * use debhelper more extensively, de-cruft debian/rules
  * remove dhcp-server preinst

 -- Andrew Pollock <apollock@debian.org>  Sun, 05 Apr 2009 11:48:34 -0700

dhcp3 (3.1.2-1) unstable; urgency=low

  * New upstream release
  * Removed pretty_print_option() patch (incorporated upstream)
  * debian/dhclient-script.linux: apply patch from Kees Cook to ignore
    DHCP-supplied MTUs below 576 (closes: #513616)
  * debian/dhclient.conf: (re)add ntp-servers to the request list (closes:
    #407667)
  * debian/rfc3442-classless-routes: also run for REBOOT reason (closes:
    #515756)
  * debian/control: bumped Standards-Version (no changes)
  * debian/compat: bump compatibility to 5
  * debian/dhcp3-server.NEWS: adjust indenting to please Lintian
  * debian/control: added ${misc:Depends} to dependencies of dhcp-client and
    dhcp3-dev

 -- Andrew Pollock <apollock@debian.org>  Wed, 01 Apr 2009 22:26:51 -0700

dhcp3 (3.1.1-7) unstable; urgency=low

  * debian/control: make dhcp-client Priority: extra

 -- Andrew Pollock <apollock@debian.org>  Sun, 01 Feb 2009 22:37:55 -0800

dhcp3 (3.1.1-6) unstable; urgency=low

  * debian/dhcp3-server.init: use -q in test_config()
  * debian/dhcp3-server.NEWS: added a mention of the requirement for
    consistent naming of failover peers (closes: #513506)
  * debian/dhcp3-server.NEWS: merged NEWS.Debian, removed
    debian/dhcp3-server.docs

 -- Andrew Pollock <apollock@debian.org>  Sun, 01 Feb 2009 18:51:06 -0800

dhcp3 (3.1.1-5) unstable; urgency=high

  * Really incorporate previous (3.1.1-3.1) NMU (closes: #484424, #484261)
  * Updated Brazilian Portugeuse debconf template translation (closes:
    #501641)

 -- Andrew Pollock <apollock@debian.org>  Thu, 16 Oct 2008 22:29:41 -0700
